--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,7 @@
+target:
+- 視聴時間,    10, 10, 10, 15,  15,  15,  15,  30,   30,   30
+- 無料ギフト,   0, 10, 40, 49, 396, 495, 495, 990, 2475, 4950
+- コメント数,   0,  0,  0,  0,   0,   1,   1,   1,    1,    1
 sr_acct: ${SRACCT}
 sr_pswd: ${SRPSWD}
-maxnorooms: 3
+maxnorooms: 4
